Fix dimensions alignment

--- a/_sass/_publications.scss
+++ b/_sass/_publications.scss
@@ -96,5 +96,5 @@
     text-align: right;
 }
 .__dimensions_badge_embed__ {
-    text-align: right;
+    text-align: right !important;
 }
